--- a/sign_up.html
+++ b/sign_up.html
@@ -6,6 +6,16 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="sign_up.css">
     <link rel="stylesheet" href="utilities.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap"
+            rel="stylesheet">
 </head>
 <body background="./images/background.png" style="background-repeat: no-repeat;">
     <section class="main">
@@ -28,7 +38,7 @@
                 <div class="right-header">
                     <div><img src="./images/survey-png.png" alt="logo" id="logo-register"></div>
                     <div>Welcome to <span>SurveySync</span></div>
-                    <div id="get-started">Get Started with your email or phone number</div>
+                    <div id="get-started">Get started with your email or phone number</div>
                 </div>
                 <div class="email">
                     <div>
