--- a/sign_up2.html
+++ b/sign_up2.html
@@ -6,6 +6,11 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="sign_up.css">
     <link rel="stylesheet" href="utilities.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap"
+            rel="stylesheet">
 </head>
 <body background="./images/background.png" style="background-repeat: no-repeat;">
     <section class="main">
