select 2 options page

--- a/homepage.html
+++ b/homepage.html
@@ -100,138 +100,162 @@
             </div>
             <div class="black-line"></div>
             <section class="homepage-survey-cards">
-                <div class="homepage-card">
-                    <div><img src="./images/icons/education.jpg"
-                            alt="Education">
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/education.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">EDUCATION</div>
+                        <div class="cards-info">"Discover how education is evolving! Take our survey and share your insights on learning trends, teaching methods, and future education needs. Your feedback shapes tomorrow's classrooms."</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">EDUCATION</div>
-                    <div class="cards-info">"Discover how education is evolving! Take our survey and share your insights on learning trends, teaching methods, and future education needs. Your feedback shapes tomorrow's classrooms."</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/environment.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">ENVIRONMENT</div>
+                        <div class="cards-info">"Empower your community and shape a sustainable future by participating in our environment survey. Your insights help us understand key environmental challenges and craft effective solutions.</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/environment.jpg"
-                            alt="Education">
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/census.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">CENSUS</div>
+                        <div class="cards-info">"Your Voice Counts: Shape the Future with Every Response.                 Take Part in the Census: Empower Communities with Your Data."</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">ENVIRONMENT</div>
-                    <div class="cards-info">"Empower your community and shape a sustainable future by participating in our environment survey. Your insights help us understand key environmental challenges and craft effective solutions.</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/exitpoll.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">EXIT POLL</div>
+                        <div class="cards-info">"Unlock insights into public opinion with our Exit Poll Survey! Cast your vote, see real-time results, and discover how your views compare to the broader community."</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/census.jpg"
-                            alt="Education">
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/government.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">GOVERNMENT</div>
+                        <div class="cards-info">"Participate in our government survey to help shape the future! Your insights will directly impact policies and services aimed at improving our community. Share your thoughts today and make a difference."</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">CENSUS</div>
-                    <div class="cards-info">"Your Voice Counts: Shape the Future with Every Response.                 Take Part in the Census: Empower Communities with Your Data."</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/health.jpg"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">HEALTH</div>
+                        <div class="cards-info">"Take part in our quick health survey to help us understand and improve the well-being of our community. Your input shapes better health solutions for everyone!"</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/exitpoll.jpg"
-                            alt="Education">
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/bank.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">BANK CUSTOMER SERVICE</div>
+                        <div class="cards-info">Are your customers satisfied with your service? Find out!</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">EXIT POLL</div>
-                    <div class="cards-info">"Unlock insights into public opinion with our Exit Poll Survey! Cast your vote, see real-time results, and discover how your views compare to the broader community."</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/feedback.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">CUSTOMER FEEDBACK FORM</div>
+                        <div class="cards-info">Give customers opportunities to offer comments and suggestions at every point in their journey.</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/government.jpg"
-                            alt="Education">
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/worklife.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">EMPLOYEE WORK-LIFE BALANCE</div>
+                        <div class="cards-info">Keep your team satisfied and retain them longer with a regular assessment of how well they are able to balance corporate work life.</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">GOVERNMENT</div>
-                    <div class="cards-info">"Participate in our government survey to help shape the future! Your insights will directly impact policies and services aimed at improving our community. Share your thoughts today and make a difference."</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/brand.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">BRAND AWARENESS</div>
+                        <div class="cards-info">Where does your brand rank, and what associations do customers have?</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/health.jpg"
-                            alt="Education">
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/pre event.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">PRE EVENT SURVEY</div>
+                        <div class="cards-info">This survey can be used in advance of an event to help with planning and preparation.</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                    <div class="card-heading">HEALTH</div>
-                    <div class="cards-info">"Take part in our quick health survey to help us understand and improve the well-being of our community. Your input shapes better health solutions for everyone!"</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
+                </a>
+                <a href="select.html">
+                    <div class="homepage-card">
+                        <div><img src="./images/icons/strategy.png"
+                                alt="Education">
+                        </div>
+                        <div class="card-heading">STRATEGIC PLANNING</div>
+                        <div class="cards-info">Examine perspectives your organization's goals and progress to create or evaluate your strategic plan.</div>
+                        <div class="cards-try-now">
+                            <button><img src="./svg/right-arrow.svg"
+                                    alt="right-arrow"><span>Try Now</span></button>
+                        </div>
                     </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/bank.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">BANK CUSTOMER SERVICE</div>
-                    <div class="cards-info">Are your customers satisfied with your service? Find out!</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/feedback.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">CUSTOMER FEEDBACK FORM</div>
-                    <div class="cards-info">Give customers opportunities to offer comments and suggestions at every point in their journey.</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/worklife.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">EMPLOYEE WORK-LIFE BALANCE</div>
-                    <div class="cards-info">Keep your team satisfied and retain them longer with a regular assessment of how well they are able to balance corporate work life.</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/brand.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">BRAND AWARENESS</div>
-                    <div class="cards-info">Where does your brand rank, and what associations do customers have?</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/pre event.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">PRE EVENT SURVEY</div>
-                    <div class="cards-info">This survey can be used in advance of an event to help with planning and preparation.</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
-                <div class="homepage-card">
-                    <div><img src="./images/icons/strategy.png"
-                            alt="Education">
-                    </div>
-                    <div class="card-heading">STRATEGIC PLANNING</div>
-                    <div class="cards-info">Examine perspectives your organization's goals and progress to create or evaluate your strategic plan.</div>
-                    <div class="cards-try-now">
-                        <button><img src="./svg/right-arrow.svg"
-                                alt="right-arrow"><span>Try Now</span></button>
-                    </div>
-                </div>
+                </a>
             </section>
             <section class="homepage-sample">
                 <div><h2>Got a question?</h2></div>
